--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,7 @@ a {
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 30px;
 }
 
 .hebergements-and-populaires section {
@@ -212,6 +213,59 @@ a {
     width: 65%;
 }
 
+.hebergements-cards{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.hebergements-1{
+    margin-top: 30px;
+    width: 100%;
+    height: 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;  
+}
+
+.hebergements-2{
+    width: 100%;
+    height: 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;    
+}
+
+.hebergements-1 a{
+    width: 30%;
+    height: 100%;
+}
+
+.hebergements-2 a{
+    width: 30%;
+    height: 100%;
+}
+
+.hebergements-cards img{
+    width: 100%;
+    height: 60%;
+    border-radius: 20px 20px 0 0;
+}
+
+.hebergements-cards .card{
+    width: 100%;
+    height: 100%;
+}
+
+.hebergements-cards .card-content{
+    padding: 0 15px 0 15px;
+    margin-top: -15px;
+}
+
+.hebergements-txt .section-txt{
+    padding-top: 30px;
+    font-size: 18px;
+}
 /****** Populaires ***********/
 .populaires {
     width: 32%;
@@ -257,6 +311,48 @@ a {
     margin-bottom: 5px;
 }
 
+/****** Activites ***********/
+
+.activites-title{
+    padding: 30px 0 0 30px;
+    gap: 40px;
+}
+
+.activites-cards{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+}
+
+.activites-cards .card{
+    height: 100%; 
+    padding: 0;
+}
+
+.activites-cards a{
+    width: 23%;
+}
+
+.activites-cards img{
+    width: 100%;
+    height: 85%;  
+    border-radius: 20px 20px 0 0;
+}
+
+.activites-cards .card-title{
+    padding: 10px 0 0 15px;
+}
+
+/****** Footer ***********/
+
+footer{
+    display: flex;
+    background-color: #F2F2F2;
+}
+footer .footer-menu{
+    width: 33%;
+    padding-left: 20px;
+}
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
 /****** Media queries ***********/
